--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
     "startbootstrap-grayscale": "^7.0.4",
+    "stimulus": "^3.0.1",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
